# bnto

./: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile.api  Dockerfile.web  LICENSE  README.md  Taskfile.yml  bnto.code-workspace  eslint.config.base.mjs  go.work  go.work.sum  knip.json  lefthook.yml  lighthouserc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  turbo.json
.claude/: BENTO_BOX_PRINCIPLE.md  CLAUDE.md  PLAN-PARALLEL.md  PLAN.md  ROADMAP.md  environment-variables.md
.claude/archive/: ATOMITON_HIERARCHICAL_PROGRESS_DEEP_DIVE.md  ATOMITON_PACKAGE_AUDIT.md  ATOMITON_PROGRESS_TRACKING_ANALYSIS.md  CHARM_STACK.md  COMPLETE_NODE_INVENTORY.md  EMOJIS.md  GO_STANDARDS_REVIEW.md  LOOP_PROGRESS_FIX_PLAN.md  PACKAGE_NAMING.md  PATH_RESOLUTION.md  PLAN-PHASE-0.md  README.md  RELEASE_CHECKLIST.md  RELEASE_QUICK_REFERENCE.md  STATUS_WORDS.md  VERSIONING.md  schema-driven-config-panel.md
.claude/decisions/: API_SERVER_LOCATION.md  MONOREPO_TOOLING.md  analytics.md  auth-evaluation.md  core-integration-testing.md  editor-ux-direction.md  form-library.md  implicit-iteration.md  monorepo-tooling.md  node-iconography.md  url-structure-recipes-namespace.md
.claude/guides/: go-for-node-devs.md  rust-for-node-devs.md  wasm-for-frontend-devs.md
.claude/investigations/: composition-layer.md
.claude/journeys/: README.md  api.md  auth.md  browser-execution.md  editor.md  engine.md  web.md
.claude/plans/: codebase-standards-remediation.md
.claude/research/: anonymous-auth-better-auth-convex.md  conveyor-belt-connections.md  nextjs-convex-better-auth-setup.md
.claude/rules/: animation.md  architecture.md  auth-routing.md  code-standards.md  commits.md  components.md  convex.md  core-api.md  go.md  gotchas.md  pages.md  performance.md  pre-commit.md  security.md  seo.md  skeletons.md  theming.md  typescript.md
.claude/strategy/: ADO_DASHBOARD_USE_CASE.md  CLOUD_DESKTOP_STRATEGY.md  MONOREPO_STRUCTURE.md  USE_CASE_ADO_DASHBOARD.md  ado-dashboard-use-case.md  auth-pattern.md  bntos.md  cloud-desktop-strategy.md  code-editor.md  core-principles.md  core-unification.md  data-fetching-strategy.md  deployment-strategy.md  design-language.md  editor-architecture.md  editor-user-journey.md  engine-execution.md  go-engine-migration.md  io-nodes.md  monorepo-structure.md  navigation-research.md  node-architecture.md  north-stars.md  open-source-strategy.md  pricing-model.md  storage-strategy.md  visual-editor.md
.github/workflows/: ci.yml  e2e.yml  lighthouse.yml  update-screenshots.yml  vercel-preview.yml
apps/api/: go.mod  server
apps/desktop/: package.json
apps/web/: .env.example  .env.test  components.json  eslint.config.mjs  middleware.ts  next.config.ts  package.json  playwright.config.ts  playwright.integration.config.ts  proxy.ts  tsconfig.json  vercel.json  vitest.config.ts
archive/: README.md
archive/engine-go/: DEVELOPMENT.md  README.md
cmd/bento/: config.go  list.go  logs.go  new.go  output.go  run_simple.go  run_tui.go  validate.go
engine/: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  catalog.snapshot.json  go.mod  go.sum  rust-toolchain.toml
engine-wasm/: Cargo.toml
engine-wasm/.cargo/: config.toml
engine-wasm/crates/bnto-core/: Cargo.toml
engine-wasm/crates/bnto-core/src/: lib.rs  progress.rs
engine-wasm/crates/bnto-core/tests/: wasm.rs
engine-wasm/crates/bnto-csv/src/: lib.rs
engine-wasm/crates/bnto-csv/tests/: wasm_clean.rs
engine-wasm/crates/bnto-file/src/: lib.rs
engine-wasm/crates/bnto-file/tests/common/: mod.rs
engine-wasm/crates/bnto-image/: Cargo.toml
engine-wasm/crates/bnto-image/src/: compress.rs  format.rs  lib.rs  wasm_bridge.rs
engine-wasm/crates/bnto-image/tests/: wasm.rs  wasm_progress.rs
engine-wasm/crates/bnto-image/tests/common/: mod.rs
engine-wasm/crates/bnto-wasm/: Cargo.toml
engine-wasm/crates/bnto-wasm/src/: lib.rs
engine-wasm/crates/bnto-wasm/tests/: wasm.rs
engine/benchmarks/: baseline.txt
engine/cmd/: test.bento.json  test.bnto.json
engine/crates/bnto-core/: Cargo.toml
engine/crates/bnto-core/src/: errors.rs  events.rs  executor.rs  lib.rs  metadata.rs  pipeline.rs  processor.rs  progress.rs  registry.rs
engine/crates/bnto-core/tests/: wasm.rs
engine/crates/bnto-csv/: Cargo.toml
engine/crates/bnto-csv/src/: clean.rs  rename_columns.rs  wasm_bridge.rs
engine/crates/bnto-csv/tests/: wasm_clean.rs  wasm_rename.rs
engine/crates/bnto-csv/tests/common/: mod.rs
engine/crates/bnto-file/: Cargo.toml
engine/crates/bnto-file/src/: rename.rs  wasm_bridge.rs
engine/crates/bnto-file/tests/: wasm_rename.rs
engine/crates/bnto-file/tests/common/: mod.rs
engine/crates/bnto-wasm/: Cargo.toml
engine/crates/bnto-wasm/benches/: pipeline_bench.rs
engine/crates/bnto-wasm/src/: catalog.rs  execute.rs  lib.rs
engine/crates/bnto-wasm/tests/: recipe_integration.rs  wasm.rs
engine/examples/: BENTO_render_combat_engineer.bento.json  BNTO_render_combat_engineer.bnto.json  auto-render-products.bento.json  auto-render-products.bnto.json  auto-render-videos.bento.json  auto-render-videos.bnto.json  composite-images-glob.bnto.json  composite-images-with-overlay.bento.json  composite-images-with-overlay.bnto.json  csv-to-folders-with-overlays.bento.json  csv-to-folders-with-overlays.bnto.json  csv-to-folders.bento.json  csv-to-folders.bnto.json  generate-product-renders.bento.json  generate-product-renders.bnto.json  product-setup-from-csv.bento.json  product-setup-from-csv.bnto.json  render.example.json
examples/: composite-images-glob.bento.json
pkg/engine/: colorizer.go  context_test.go  executor.go  executor_group.go  executor_single.go  graph.go  itamae.go  itamae_test.go  loop_iteration.go  loop_times.go  messages.go  progress.go
pkg/itamae/: context_template.go  loop_extraction.go
pkg/logger/: config.go  context.go  shoyu.go  streaming.go  styles.go
pkg/miso/: bento_ops.go  events.go  keys.go  views.go
pkg/omakase/: validators.go
pkg/paths/: paths.go
pkg/tui/: doc.go  (+21 more)
test-fixtures/: README.md  create-orientation-fixture.mjs
(+964 files in other folders)
