# =============================================================================
# bnto-core — The Foundation WASM Crate
# =============================================================================
#
# WHAT IS THIS CRATE?
# This is the "foundation" crate for the Bnto WASM engine. It provides:
#   1. Shared types and error definitions used by all node crates
#   2. The node execution interface (trait) that every node type implements
#   3. A simple orchestrator that runs nodes and reports progress
#   4. Utilities for working with files and data across the Rust ↔ JS boundary
#
# Think of this as the "engine framework" that node crates plug into.
# The image crate, CSV crate, etc. will all depend on this crate.
#
# WHY IS IT SEPARATE FROM THE NODE CRATES?
# Separation of concerns (Bento Box Principle!). This crate defines
# the contracts (interfaces). Node crates implement them. The web app
# only needs to import the crates it uses — if someone only needs
# image processing, they don't have to download CSV code too.

[package]
# The crate's name — used in `use bnto_core::...` imports and as the
# package identifier on crates.io (if we ever publish).
name = "bnto-core"

# Version follows Semantic Versioning (semver): MAJOR.MINOR.PATCH
# 0.1.0 means "first development release, expect breaking changes"
version = "0.1.0"

# The Rust "edition" is like a language version. Each edition enables
# new syntax and features while keeping old code compatible.
# 2024 is the latest edition, released with Rust 1.85.
edition = "2024"

# A short description shown on crates.io and in cargo search results.
description = "Core WASM engine library for Bnto — shared types, traits, and orchestration"

# The license. Same as the rest of the bnto repo.
license = "MIT"

# WASM-PACK METADATA
# wasm-pack reads settings from [package.metadata.wasm-pack.*].
# These control the post-compilation optimization step.
[package.metadata.wasm-pack.profile.release]
# wasm-opt flags — must match ALL features Rust enables by default.
# Rust 1.87+ (LLVM 20) enables 6 post-MVP features for wasm32-unknown-unknown.
# See bnto-wasm/Cargo.toml for full explanation.
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-mutable-globals", "--enable-reference-types", "--enable-multivalue"]

# =============================================================================
# Library Configuration
# =============================================================================

[lib]
# "rlib" = Rust Library. Other crates in the workspace (bnto-image, bnto-wasm)
# depend on this crate and `use` its types, traits, and error definitions.
#
# Previously this was ["cdylib", "rlib"] — the cdylib responsibility has moved
# to the bnto-wasm entry point crate. Only ONE crate in the workspace should
# be cdylib (produces the .wasm file). All others are rlib.
crate-type = ["rlib"]

# =============================================================================
# Dependencies
# =============================================================================
#
# `{ workspace = true }` means "use the version defined in the root
# Cargo.toml's [workspace.dependencies]". This keeps all our crates
# on the same version. Same idea as pnpm's catalog feature.

[dependencies]
# The Rust ↔ JS bridge. See workspace Cargo.toml for details.
wasm-bindgen = { workspace = true }

# For working with JS Promises from Rust (async processing).
wasm-bindgen-futures = { workspace = true }

# Bindings to JavaScript built-in objects (Array, Uint8Array, etc.).
js-sys = { workspace = true }

# Bindings to browser Web APIs. We enable specific features below.
# Each feature = one Web API. Only include what we use (smaller binary).
web-sys = { workspace = true, features = [
    # console.log() — for debug logging from Rust
    "console",
    # Performance.now() — for timing how long operations take
    "Performance",
    # File and Blob — for reading user-uploaded files
    "File",
    "Blob",
    # Worker — we run inside Web Workers, need access to self
    "DedicatedWorkerGlobalScope",
] }

# Error handling — see workspace Cargo.toml for details.
thiserror = { workspace = true }

# Serialization — converting Rust structs to/from JSON.
serde = { workspace = true }
serde_json = { workspace = true }

# NOTE: console_error_panic_hook was removed — panic hook setup is the
# responsibility of the bnto-wasm entry point crate, not foundation crates.

# =============================================================================
# Dev Dependencies (only used during testing, not in the final WASM binary)
# =============================================================================

[dev-dependencies]
# Test harness for running Rust tests in a browser or Node.js.
wasm-bindgen-test = { workspace = true }
